--- a/public/about.html
+++ b/public/about.html
@@ -45,9 +45,13 @@
                 >Home</a
               >
               <a class="nav-link" href="./about.html">About</a>
-              <a class="nav-link" href="./media.html">Media</a>
+              <a
+                class="nav-link"
+                href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
+                ><i class="fa fa-youtube-play"></i
+              ></a>
+              <a class="nav-link" href="./media.html">Gallery</a>
               <a class="nav-link" href="./contact.html">Contact</a>
-              <a class="nav-link" href="./offer.html">What We Offer</a>
             </div>
           </div>
         </div>
@@ -57,25 +61,45 @@
       <!-- About -->
       <div id="about" class="about">
         <div class="col-12 text-center">
-          <h2 class="heading">About</h2>
-          <div class="heading-underline"></div>
+          <h2 class="heading">ABOUT US</h2>
         </div>
-        <div class="container intro band">
+        <div class="container intro">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 band">
               <img class="about-img" src="./img/full band.jpeg" />
             </div>
             <div class="col-md-4 pt-md-5">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Accusamus, assumenda ipsa! Inventore consectetur eius cum
-              veritatis, obcaecati delectus, corporis illo perferendis natus,
-              numquam alias ex nulla! Sunt excepturi itaque dolorum.
+              <br />
+              <p>
+                HypnoJive are a six piece famale fronted party band, who have
+                been performing together since 2015. <br /><br />
+                As individuals we have worked with some of the leading artists
+                in the UK, such as Brandon Flowers, Sugababes, Craig David and
+                Paloma Faith.
+                <br /><br />
+                We are a tight knit team of professionals who hold residencies
+                across Manchesters most prestigious venues. We pride ourselves
+                on our energetic perfomances and versitile repetoire.
+                <br /><br />
+                Do not hesitate to get in touch today so we can discuss your
+                bespoke event.
+                <br /><br />
+                <h4 class="spotify">
+
+                  Check out our song list
+                  <a
+                  href="https://open.spotify.com/playlist/7rIaPHls9GbIuRxUSlJg0t?si=FQMNG7RTSKe1kBPffmhxAQ&nd=1"
+                  >
+                  <i class="fa fa-spotify"></i>
+                </a>
+              </h4>
+              </p>
             </div>
           </div>
         </div>
-        <div class="col-12 text-center">
-          <h3>Meet the Band</h3>
+        <div class="col-12 text-center mb-2 mt-2">
           <div class="heading-underline"></div>
+          <h3>Meet the Band</h3>
         </div>
         <div class="container text-center">
           <div class="row">
@@ -111,5 +135,29 @@
         </div>
       </div>
     </div>
+    <div class="contact">
+      <hr class="socket" />
+
+      <footer>
+        <div class="row justify-content-center">
+          <div class="col-md-5 text-center">
+            <a href="mailto:hypnojiveband@gmail.com"
+              ><i class="fa fa-envelope"></i
+            ></a>
+            <a href="https://www.instagram.com/hypnojiveband/"
+              ><i class="fa fa-instagram"></i
+            ></a>
+            <a
+              href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
+              ><i class="fa fa-youtube-square"></i
+            ></a>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
   </body>
 </html>
