--- a/public/contact.html
+++ b/public/contact.html
@@ -46,9 +46,13 @@
                 >Home</a
               >
               <a class="nav-link" href="./about.html">About</a>
-              <a class="nav-link" href="./media.html">Media</a>
+              <a
+                class="nav-link"
+                href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
+                ><i class="fa fa-youtube-play"></i
+              ></a>
+              <a class="nav-link" href="./media.html">Gallery</a>
               <a class="nav-link" href="./contact.html">Contact</a>
-              <a class="nav-link" href="./offer.html">What We Offer</a>
             </div>
           </div>
         </div>
@@ -57,7 +61,7 @@
 
       <!-- Start of Landing Page -->
       <div class="landing">
-        <div><h2 class="heading">Don't be shy...</h2></div>
+        <div><h2 class="heading">CONTACT</h2></div>
         <div class="col-12">
           <img
             class="band"
@@ -72,9 +76,18 @@
               <button
                 type="button"
                 class="btn btn-outline-light"
-                href="tel:07581280034"
+                href="tel:+447581280034"
               >
                 Tap here to Call
+              </button>
+              <br />
+              or
+              <br />
+              <button type="button" class="btn btn-outline-light email">
+                Email
+                <a href="mailto:hypnojiveband@gmail.com"
+                  ><i class="fa fa-envelope"></i
+                ></a>
               </button>
             </div>
           </div>
@@ -88,7 +101,7 @@
       <footer>
         <div class="row justify-content-center">
           <div class="col-md-5 text-center">
-            <a href="mailto:andrewjp1992@gmail.com"
+            <a href="mailto:hypnojiveband@gmail.com"
               ><i class="fa fa-envelope"></i
             ></a>
             <a href="https://www.instagram.com/hypnojiveband/"
