--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             <a class="nav-link" href="./about.html">About</a>
-            <a class="nav-link" href="./media.html">Media</a>
+            <a class="nav-link" href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"><i class="fa fa-youtube-play " ></i></a>
+            <a class="nav-link" href="./media.html">Gallery</a>
             <a class="nav-link" href="./contact.html">Contact</a>
-            <a class="nav-link" href="./offer.html">What We Offer</a>
             
             
           </div>
@@ -54,18 +54,18 @@
     <!-- Start of Landing Page -->
     <div class="landing">
       <div><h2 class="heading">HYPNOJIVE</h2> </div>
-      <div class="col-12"><img class="band" src="./img/cropped.png" alt="full band shot"></div>
+      <div class="col-12 mx-auto"><img class="band " src="./img/cropped.png" alt="full band shot"></div>
       <!-- <div class="col-12"><img class="logo" src="./img/HypnoJive Final.svg"></div> -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-push-6">
             <div class="container">
               <br>
-              <p>‘Hypnojive are a Manchester based cover band who reimagine songs
+              <p>Hypnojive are a Manchester based cover band who reimagine songs
                 <b>you </b>love. We have an eclectic repertoire that can fit any
                 occasion and fill any dance floor. Our performances are delivered
                 by some of the UK’s best session musicians and we can be trusted
-                to bring the party to any event.’</p>
+                to bring the party to any event.</p>
               </div>
             </div>
             <div class="col-md-6 col-md-pull-6">
@@ -101,7 +101,7 @@
               <div class="row justify-content-center">
                 <div class="col-md-5 text-center">
                   <strong>Contact:</strong><br>
-                  <a href="mailto:andrewjp1992@gmail.com"><i class="fa fa-envelope"></i></a>
+                  <a href="mailto:hypnojiveband@gmail.com"><i class="fa fa-envelope"></i></a>
                   <a href="https://www.instagram.com/hypnojiveband/"><i class="fa fa-instagram"></i></a>
                   <a href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"><i class="fa fa-youtube-square"></i></a>
                 </div>
