--- a/public/media.html
+++ b/public/media.html
@@ -56,12 +56,9 @@
     
     <!-- Start of Landing Page -->
     <div class="media">
-      <div><h2 class="heading">MEDIA</h2> </div>
+      <div><h2 class="heading">GALLERY</h2> </div>
       <!-- <div class="col-12"><img class="logo" src="./img/HypnoJive Final.svg"></div> -->
       <div class="container"><div class="row text-center">
-                    <h2>Pictures</h2>
-                  
-
                     <div id="slides" class="carousel slide carousel-fade" data-ride="carousel">
                       <ol class="carousel-indicators">
                         <li data-target="#slides" data-slide-to='0' class="active"></li>
