--- a/public/media.html
+++ b/public/media.html
@@ -41,8 +41,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-            <a class="nav-link" href="./about.html">About</a>
+            <a class="nav-link"  href="./index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="./about.html">About</a>
             <a class="nav-link" href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"><i class="fa fa-youtube-play " ></i></a>
             <a class="nav-link" href="./media.html">Gallery</a>
             <a class="nav-link" href="./contact.html">Contact</a>
