--- a/public/media.html
+++ b/public/media.html
@@ -68,13 +68,13 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                   
-                            <img src="/public/img/gallery1.jpeg" class="d-block w-100 h-auto" alt="..." data-target="#carouselExampleControls">
+                            <img src="./img/gallery1.jpeg" class="d-block w-100 h-auto" alt="..." data-target="#carouselExampleControls">
                           </div>
                           <div class="carousel-item">
-                            <img src="/public/img/steps cropped.png" class="d-block mx-auto w-auto h-50 " alt="...">
+                            <img src="./img/steps cropped.png" class="d-block mx-auto w-auto h-50 " alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="/public/img/sofa cropped.jpeg" class="d-block w-100 h-auto" alt="...">
+                            <img src="./img/sofa cropped.jpeg" class="d-block w-100 h-auto" alt="...">
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
