fixes spotify link

--- a/public/about.html
+++ b/public/about.html
@@ -73,25 +73,25 @@
               <div class="col-xl-5 pt-xl-5">
                 <br />
                 <p class="text">
-                  HypnoJive are a six piece female fronted party band, who have
+                  HypnoJive are a six piece fmale fronted party band, who have
                   been performing together since 2015. <br /><br />
                   As individuals we have worked with some of the leading artists
                   in the UK, such as Brandon Flowers, Sugababes, Craig David and
                   Paloma Faith.
                   <br /><br />
                   We are a tight knit team of professionals who hold residencies
-                  across Manchester's most prestigious venues. We pride ourselves
+                  across Manchesters most prestigious venues. We pride ourselves
                   on our energetic perfomances and versitile repetoire.
                   <br /><br />
                   Do not hesitate to get in touch today so we can discuss your
                   bespoke event.
                   <br /><br />
                   <h4 class="spotify">
-                    
-                    Check out our song list
                     <a
                     href="https://open.spotify.com/playlist/7rIaPHls9GbIuRxUSlJg0t?si=FQMNG7RTSKe1kBPffmhxAQ&nd=1"
                     >
+                    
+                    Check out our song list
                     <i class="fa fa-spotify"></i>
                   </a>
                 </h4>
