--- a/public/about.html
+++ b/public/about.html
@@ -73,7 +73,7 @@
               <div class="col-xl-5 pt-xl-5">
                 <br />
                 <p class="text">
-                  HypnoJive are a six piece fmale fronted party band, who have
+                  HypnoJive are a six piece female fronted party band, who have
                   been performing together since 2015. <br /><br />
                   As individuals we have worked with some of the leading artists
                   in the UK, such as Brandon Flowers, Sugababes, Craig David and
