--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/fixed.css" />
   </head>
   <body data-spy="scroll" data-target="#navbarResponsive">
     <!-- start of home -->
@@ -57,22 +56,24 @@
           </div>
         </div>
       </nav>
+      <link rel="import" href="navbar.html">
     <!-- End of Navigation -->
     
     <!-- Start of Landing Page -->
-    <div class="landing">
-      <div><h2 class="heading">HYPNOJIVE</h2> </div>
-      <div class="col-12 mx-auto"><img class="band " src="./img/cropped.png" alt="full band shot"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-push-6">
-            <div class="container">
-              <br>
-              <p>Hypnojive are a Manchester based cover band who reimagine songs
-                <b>you </b>love. We have an eclectic repertoire that can fit any
-                occasion and fill any dance floor. Our performances are delivered
-                by some of the UK’s best session musicians and we can be trusted
-                to bring the party to any event.</p>
+      <div class="landing">
+        <div><h2 class="heading">HYPNOJIVE</h2> 
+        </div>
+        <div class="col-12 mx-auto"><img class="band " src="./img/cropped.png" alt="full band shot"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-push-6">
+              <div class="container">
+                <br>
+                <p>Hypnojive are a Manchester based cover band who reimagine songs
+                  <b>you </b>love. We have an eclectic repertoire that can fit any
+                  occasion and fill any dance floor. Our performances are delivered
+                  by some of the UK’s best session musicians and we can be trusted
+                  to bring the party to any event.</p>
               </div>
             </div>
             <div class="col-md-6 col-md-pull-6">
