--- a/public/media.html
+++ b/public/media.html
@@ -18,8 +18,6 @@
     
 </script> 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/fixed.css" />
-
   </head>
   <body data-spy="scroll" data-target="#navbarResponsive">
     <!-- start of home -->
@@ -71,7 +69,7 @@
                             <img src="./img/gallery1.jpeg" class="d-block w-100 h-auto" alt="..." data-target="#carouselExampleControls">
                           </div>
                           <div class="carousel-item">
-                            <img src="./img/steps cropped.png" class="d-block mx-auto w-auto h-50 " alt="...">
+                            <img src="./img/steps full band.jpeg" class="d-block mx-auto w-auto h-auto " alt="...">
                           </div>
                           <div class="carousel-item">
                             <img src="./img/sofa cropped.jpeg" class="d-block w-100 h-auto" alt="...">
