--- a/public/about.html
+++ b/public/about.html
@@ -62,40 +62,38 @@
         <div class="col-12 text-center">
           <h2 class="heading">ABOUT US</h2>
         </div>
-        <div class="col-12 mx-auto"><img class="band d-block d-lg-none" src="./img/full band.jpeg" alt="full band shot"></div>
-
+        <div class="col-12 mx-auto">
+          <img class="band d-block d-lg-none" src="./img/full band.jpeg" alt="full band shot">
+        </div>
         <div class="container intro">
           <div class="row">
             <div class="col-xl-7 d-none d-lg-block">
               <img class="bandxl" src="./img/full band.jpeg" />
             </div>
-              <div class="col-xl-5 pt-xl-5">
-                <br />
-                <p class="text">
+            <div class="col-xl-5 pt-xl-5">
+              <br />
+              <p class="text">
                   HypnoJive are a six piece female fronted party band, who have
                   been performing together since 2015. <br /><br />
                   As individuals we have worked with some of the leading artists
                   in the UK, such as Brandon Flowers, Sugababes, Craig David and
                   Paloma Faith.
-                  <br /><br />
+              <br /><br />
                   We are a tight knit team of professionals who hold residencies
                   across Manchesters most prestigious venues. We pride ourselves
                   on our energetic perfomances and versitile repetoire.
-                  <br /><br />
+                <br /><br />
                   Do not hesitate to get in touch today so we can discuss your
                   bespoke event.
-                  <br /><br />
-                  <h4 class="spotify">
-                    <a
-                    href="https://open.spotify.com/playlist/7rIaPHls9GbIuRxUSlJg0t?si=FQMNG7RTSKe1kBPffmhxAQ&nd=1"
-                    >
-                    
+                <br /><br />
+                <h4 class="spotify">
+                <a href="https://open.spotify.com/playlist/7rIaPHls9GbIuRxUSlJg0t?si=FQMNG7RTSKe1kBPffmhxAQ&nd=1">
                     Check out our song list
                     <i class="fa fa-spotify"></i>
-                  </a>
+                </a>
                 </h4>
-              </p>
-            </div>
+                </p>
+              </div>
           </div>
           
         </div>
@@ -137,27 +135,30 @@
     </div>
     <div class="contact">
       <hr class="socket" />
-
-      <footer>
-        <div class="row justify-content-center">
-          <div class="col-md-5 text-center">
-            <a href="mailto:hypnojiveband@gmail.com"
-              ><i class="fa fa-envelope"></i
-            ></a>
-            <a href="https://www.instagram.com/hypnojiveband/"
-              ><i class="fa fa-instagram"></i
-            ></a>
-            <a
-              href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
-              ><i class="fa fa-youtube-square"></i
-            ></a>
+        <footer>
+        <div class="container">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-md-5 text-center">
+                <a href="mailto:hypnojiveband@gmail.com">
+                  <i class="fa fa-envelope"></i
+                  ></a>
+                  <a href="https://www.instagram.com/hypnojiveband/"
+                  ><i class="fa fa-instagram"></i
+                    ></a>
+                    <a
+                    href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
+                    ><i class="fa fa-youtube-square"></i
+                      ></a>
+              </div>
+            </div>
           </div>
         </div>
-      </footer>
-    </div>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    />
+        </footer>
+      </div>
+          <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+          />
   </body>
 </html>
