--- a/public/contact.html
+++ b/public/contact.html
@@ -98,18 +98,20 @@
       <hr class="socket" />
 
       <footer>
-        <div class="row justify-content-center">
-          <div class="col-md-5 text-center">
-            <a href="mailto:hypnojiveband@gmail.com"
-              ><i class="fa fa-envelope"></i
-            ></a>
-            <a href="https://www.instagram.com/hypnojiveband/"
-              ><i class="fa fa-instagram"></i
-            ></a>
-            <a
-              href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
-              ><i class="fa fa-youtube-square"></i
-            ></a>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-5 text-center">
+              <a href="mailto:hypnojiveband@gmail.com"
+                ><i class="fa fa-envelope"></i
+              ></a>
+              <a href="https://www.instagram.com/hypnojiveband/"
+                ><i class="fa fa-instagram"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/watch?v=n4-0nc4sTzY&list=PLZ2oFbuCHzuttAI3N7-wQf2baVh5IBfg_&ab_channel=HYPNOJIVE"
+                ><i class="fa fa-youtube-square"></i
+              ></a>
+            </div>
           </div>
         </div>
       </footer>
