adds g tags to each page

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,19 @@
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LVH0PQ2ZQ9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LVH0PQ2ZQ9");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HYPNOJIVE</title>
@@ -72,13 +86,13 @@
         <div class="container">
           <div class="row text-center">
             <div class="container de">
-              <button
-                type="button"
-                class="btn btn-outline-light"
-                href="tel:+447581280034"
+              <a
+                href="https://api.whatsapp.com/send?phone=447951111031&text=%F0%9F%8E%A4%20Hello%2C%20we%20are%20Hypnojive!%20Feel%20free%20to%20contact%20us%20for%20further%20details"
               >
-                Tap here to Call
-              </button>
+                <button type="button" class="btn btn-outline-light">
+                  Whatsapp <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                </button>
+              </a>
               <br />
               or
               <br />
